--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Title</h1>
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
-  <h2>Love Story</h2> 
+  <h2>Subtitle</h2> 
 
   <!-- Test 3: Wrap the heading below, 'Chapter 1', in `h3` tags -->
   <h3>Chapter One</h3>
