Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <em>Hello World</em>
-<p>Hello Moon</p>
+<strong>Hello Moon</strong>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   <h1>Title</h1>
 
