--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <em>Hello World</em>
 <strong>Hello Moon</strong>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
-  <h1>Title</h1>
+  <h1><title>Text Formatting in HTML</title></h1>
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
-  <h2>Subtitle</h2> 
+  <h2><subtitle>A Love Story</subtitle></h2> 
 
   <!-- Test 3: Wrap the heading below, 'Chapter 1', in `h3` tags -->
   <h3>Chapter One</h3>
